<package>
  <name>moveit_ros_benchmarks</name>
  <version>0.0.1</version>
  <description>Enhanced tools for benchmarks in MoveIt!</description>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_warehouse</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>roscpp</run_depend>

</package>
